k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-app
  namespace: lab
  labels:
    app: lab-app
spec:
  type: NodePort
  selector:
    app: lab-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
